--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ Django==1.10
 pinax-theme-bootstrap==7.10.2
 pyowm==2.4.0
 requests==2.9.2
+pycurl>=7.43.0
 
 git+git://git.symlink.me/pub/weboob/stable.git
