Scope app dictionnaries, add tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,10 @@ requests==2.9.2
 pycurl>=7.43.0
 
 git+git://git.symlink.me/pub/weboob/stable.git
+
+
+pytest==3.0.3
+pytest-cache==1.0
+pytest-django==3.0.0
+pytest-sugar==0.7.1
+pytest-watch==4.1.0
