--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-social-auth==0.2.21
 pinax-webanalytics==2.0.4
 pinax-eventlog==1.1.2
 
+cookiecutter==1.4.0
 Django==1.10
 pinax-theme-bootstrap==7.10.2
 pyowm==2.4.0
