--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ pinax-theme-bootstrap==7.10.2
 pyowm==2.4.0
 requests==2.9.2
 pycurl>=7.43.0
+icalendar>=3.10
+asana==0.5.1
 
 git+git://git.symlink.me/pub/weboob/stable.git
 
