--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ python-social-auth==0.2.21
 pinax-webanalytics==2.0.4
 pinax-eventlog==1.1.2
 django-gravatar2==1.4.0
-
 Django==1.10
 pinax-theme-bootstrap==7.10.2
 pyowm==2.4.0
@@ -12,9 +11,9 @@ requests==2.9.2
 pycurl>=7.43.0
 icalendar>=3.10
 asana==0.5.1
+qrcode==5.3
 
 git+git://git.symlink.me/pub/weboob/stable.git
-
 
 pytest==3.0.3
 pytest-cache==1.0
