--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 env:
 - python2.7
 install:
-- pip install -r requirements.txt
+- pip install -r requirements/requirements.txt
 script:
 - pytest
 notifications:
