--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.7.0",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "bootstrap-switch": "^3.3.4"
   },
   "babel": {
     "presets": [
