--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=tests.settings
+DJANGO_SETTINGS_MODULE=laboite.settings.testing
 python_files=
     tests.py
     test_*.py
