--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 - python2.7
 install:
 - pip install -r requirements/requirements.txt
+- pip install -r requirements/tests.txt
 script:
 - pytest
 notifications:
