--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ DJANGO_SETTINGS_MODULE=laboite.settings.testing
 python_files=
     tests.py
     test_*.py
+addopts = --cov=laboite --cov-report=xml .
