--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^3.3.7",
+    "bootstrap-switch": "^3.3.4",
     "font-awesome": "^4.7.0",
-    "jquery": "^2.1.4",
-    "bootstrap-switch": "^3.3.4"
+    "jquery": "^2.2.4",
+    "watch": "^1.0.2"
   },
   "babel": {
     "presets": [
