--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,6 +9,7 @@ pinax-theme-bootstrap==7.10.2
 pyowm==2.4.0
 requests==2.9.2
 icalendar>=3.10
+unidecode>=0.04.21
 asana==0.5.1
 qrcode==5.3
 Pygments==2.1.3
