--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -14,3 +14,4 @@ asana==0.5.1
 qrcode==5.3
 Pygments==2.1.3
 https://git.weboob.org/weboob/devel/repository/archive.tar.bz2?ref=1.2
+facebook-sdk==2.0.0
