--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -15,3 +15,4 @@ qrcode==5.3
 https://git.weboob.org/weboob/devel/repository/archive.tar.bz2?ref=1.3
 facebook-sdk==2.0.0
 jsonpath_ng==1.4.3
+Pygments==2.2.0
