--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -12,7 +12,7 @@ icalendar>=3.10
 unidecode>=0.04.21
 asana==0.5.1
 qrcode==5.3
-https://git.weboob.org/weboob/devel/repository/archive.tar.bz2?ref=1.3
+weboob==1.5
 facebook-sdk==2.0.0
 jsonpath_ng==1.4.3
 Pygments==2.2.0
