--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,18 +1,18 @@
-django-autocomplete-light==3.2.1
-django-user-accounts==1.3.1
-python-social-auth==0.2.21
-pinax-webanalytics==2.0.4
-pinax-eventlog==1.1.2
-django-gravatar2==1.4.0
-Django<2
-pinax-theme-bootstrap==7.10.2
-pyowm==2.4.0
+django-autocomplete-light==3.5.1
+django-user-accounts==3.0.2
+social-auth-app-django==4.0.0
+pinax-webanalytics==5.0.0
+pinax-eventlog==4.0.1
+django-gravatar2==1.4.4
+Django>2,<2.1
+pinax-theme-bootstrap==8.0.1
+pyowm==2.10.0
 requests==2.24.0
-icalendar>=3.10
-unidecode>=0.04.21
-asana==0.5.1
-qrcode==5.3
-weboob==1.5
-facebook-sdk==2.0.0
-jsonpath_ng==1.4.3
-Pygments==2.2.0
+icalendar==4.0.6
+unidecode==1.1.1
+asana==0.10.0
+qrcode==6.1
+weboob==2.0
+facebook-sdk==3.1.0
+jsonpath_ng==1.5.1
+Pygments==2.6.1
